# temporal-docs

./: LICENSE  README.md
R Interpreter/: DataParser.R
Rust Parser/temporal_document_analyzer/: Cargo.toml
Rust Parser/temporal_document_analyzer/src/: error.rs  lib.rs  main.rs  text_edits.rs
