[package]
name = "temporal_docs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["derive"]}
csv = "1.4.0"
itertools = "0.15.0"
rayon = "1.12.0"
serde = {version = "1.0.228", features = ["derive"]}
similar = "3.1.0"
strum = {version = "0.28.0", features = ["derive"]}
strum_macros = "0.28.0"
undoc = "0.2.1"
unicode-segmentation = "1.13.2"
walkdir = "2.5.0"
