[package]
name = "temporal_docx"
version = "0.1.0"
edition = "2024"
authors = ["Anyll Markevich <anyllmarkevich@gmail.com>"]
description = "Convert temporal snapshopts of docx files from multiple people into analysis-ready text."
license = "MIT"
homepage = "https://github.com/anyllmarkevich/temporal-docs"
repository = "https://github.com/anyllmarkevich/temporal-docs"
keywords = ["versioning", "docx", "document_history", "document_versioning", "data_extraction"]
categories = ["command-line-utilities", "parsing", "text-processing"]

[dependencies]
anyhow = "1.0.103"
clap = {version = "4.6.1", features = ["derive"]}
csv = "1.4.0"
ignore = "0.4.28"
indicatif = {version = "0.18.6", features = ["rayon"]}
itertools = "0.15.0"
rayon = "1.12.0"
serde = {version = "1.0.228", features = ["derive"]}
similar = "3.1.0"
strum = {version = "0.28.0", features = ["derive"]}
strum_macros = "0.28.0"
undoc = "0.2.1"
unicode-segmentation = "1.13.2"
walkdir = "2.5.0"
